--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "reflux-gists-example",
-  "version": "0.1.0",
-  "description": "A sample Reflux app displaying an updated list of the latest public Gists",
-  "author": "Csaba Okrona",
-  "license": "MIT",
+  "name": "react-screener",
+  "version": "0.0.1",
   "dependencies": {
     "jquery": "^2.1.3",
     "react": "~0.13.1",
@@ -49,16 +46,5 @@
     "start": "./node_modules/gulp/bin/gulp.js serve",
     "test": "./node_modules/jest-cli/bin/jest.js",
     "build": "./node_modules/gulp/bin/gulp.js build"
-  },
-  "jest": {
-    "scriptPreprocessor": "./preprocessor.js",
-    "unmockedModulePathPatterns": [
-      "./node_modules/react"
-    ],
-    "testFileExtensions": [
-      "jsx",
-      "js",
-      "cjsx"
-    ]
   }
 }
